# engine_duck

./: Cargo.toml
media/: high_scores.yaml  official_scores.yaml
src/: asset.rs  main.rs  utils.rs
src/data/: level.rs  mod.rs
src/game/: font.rs  helper.rs  high_score.rs  hud.rs  menu.rs  mod.rs  player.rs  player_select.rs  score_repository.rs  screen.rs  text.rs  timeup.rs
src/game/game_play/: mod.rs  running.rs  timeup.rs
src/game/menu/: gui.rs  mod.rs
src/game/player/: action.rs  mod.rs
src/game/player_select/: avoid.rs  collect.rs  gui.rs  guide.rs  mod.rs
src/level_viewer/: mod.rs
