[package]
name = "engine_duck"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]

[[bin]]
name = "duck_husky_wedding"
path = "src/main.rs"

[dependencies]
failure = ">=0.1.1"
glm = ">=0.2.3"
serde = ">=1.0.2"
serde_yaml = ">=0.7"
serde_derive = ">=1.0.2"

[dependencies.moho]
git = "https://github.com/nrxus/moho"

[dependencies.sdl2]
version = ">=0.31.0"
default-features = false
features = []